@@ -716,6 +716,8 @@ extern int util_is_digit(char c);
 
 extern int util_get_available_drives(char *texto);
 
+extern int get_cpu_frequency(void);
+
 #define MEMORY_ZONE_NUM_FILE_ZONE 16
 #define MEMORY_ZONE_NUM_TBBLUE_COPPER 17 
 #define MEMORY_ZONE_NUM_TIMEX_EXROM 18
